Fixed some layout problems caused by maincss

--- a/CSS/styleindex.css
+++ b/CSS/styleindex.css
@@ -19,7 +19,6 @@ h1 {
 h3 {
     text-align: center;
     width: 80%;
-    height: 20%;
     margin: 8rem auto;
 }
 
@@ -34,7 +33,7 @@ section#firstsection div {
     margin: 0rem 0rem;
     align-items: center;
     width: 750px;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     flex-direction: column;
 }
@@ -69,7 +68,7 @@ section#secondsection div {
     margin: 0rem 0rem;
     align-items: center;
     width: 750px;
-    justify-content: center;
+    justify-content: space-evenly;
     text-align: center;
     flex-direction: column;
 }
@@ -124,7 +123,7 @@ section#thirdsection div#customer-service div {
 }
 
 section#thirdsection div#customer-service div h3 {
-    margin-top: -40rem;
+    margin-top: -10rem;
     color: white;
     text-shadow: 1px 1px 10px black;
 }
